fixed popup scroll not fitting container :

--- a/css/Pop_Up.css
+++ b/css/Pop_Up.css
@@ -54,8 +54,13 @@
 
 .popUp-Body {
     padding: 10px 15px;
+    height: 100%;
+}
+
+#pop_up_window{
     overflow-y: scroll;
-    height: 90%;
+
+
 }
 
 .popUp-Body-Title {
